Fix spacing, add subtitle

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ section#dadi {
     box-shadow: rgba(255, 24, 24, 0.25) 0px 30px 60px -12px inset, rgba(255, 181, 10, 0.3) 0px 18px 36px -18px inset;
 }
 
+section#train {
+    box-shadow: rgba(255, 1, 1, 0.911) 0px 30px 60px -12px inset;
+}
+
 .game,
 .form-ticket {
     display: flex;
